node_modules/jsforce/test/package/JSforceTestSuite/objects/JSforceTestSetting__c.object
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <fields>
        <fullName>ExecLatch__c</fullName>
        <label>Execution Latch</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>ExecUsername__c</fullName>
        <label>Execution Username</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TargetTableNames__c</fullName>
        <label>Target Table Names</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>JSforce Test Setting</label>
</CustomObject>